[package]
name = "pea_2_pea"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "server"
path = "src/server/main.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"


[dependencies]
chrono = "0.4.41"
clap = { version = "4.5.41", features = ["derive"] }
orx-concurrent-vec = "3.6.0"
readonly = "0.2.13"
smol = "2.0.2"
tappers = "0.4.2"
